<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A63CC"
    tools:context=".BattleShockFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBackground"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_battleshock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/title_battleshock"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_battleshock2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="1dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/details_battleshock2"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_battleshock_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="48dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/details_battleshock3"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/bs_goto_movement_button"
            app:layout_constraintTop_toBottomOf="@+id/details_battleshock2"
            tools:layout_editor_absoluteX="-3dp" />

        <Button
            android:id="@+id/bs_goto_movement_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="652dp"
            android:text="@string/goto_movement_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>